# hw-monitoring

./: .gitignore  CMakeLists.txt  README.md
config/: pins.h
include/: hardware_stats.h  metrics.h  page.h  page_manager.h  utility.h
include/hw_monitoring/: utility.h
include/input/: buttons.h
include/lcd/: hd44780.h
src/: hardware_stats.c  main.c  metrics.c  page_manager.c  utility.c
src/input/: buttons.c
src/lcd/: hd44780.c
